--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,13 @@
 language: node_js
-
+node_js:
+    - "0.10"
+    - "0.12"
+    - "4.1"
+	
 sudo: required
 
 before_script:
   - npm install -g htmlhint
 
 script:
-  - htmlhint --config htmlhint.conf index.xhtml
+  - htmlhint
